--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A flickr slideshow developed with React",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "webpack-dev-server --mode development --open 'Google Chrome' --hot",
     "build": "webpack --mode production"
   },
@@ -25,6 +25,7 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "chai": "^4.2.0",
     "css-loader": "^1.0.0",
     "dotenv-webpack": "^1.5.7",
     "eslint": "^5.7.0",
@@ -32,8 +33,11 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
+    "fetch-mock": "^7.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "mocha": "^5.2.0",
     "node-sass": "^4.9.4",
+    "redux-mock-store": "^1.5.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.21.0",
@@ -43,6 +47,7 @@
   "dependencies": {
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
+    "react-debounce-input": "^3.2.0",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.1",
