--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A flickr slideshow developed with React",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha test/**/*.js --require @babel/register",
     "start": "webpack-dev-server --mode development --open 'Google Chrome' --hot",
     "build": "webpack --mode production"
   },
@@ -22,6 +22,7 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -45,6 +46,7 @@
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
+    "node-fetch": "^2.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-debounce-input": "^3.2.0",
