--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.6",
+    "@fortawesome/free-solid-svg-icons": "^5.4.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "node-fetch": "^2.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
